tests/backpack/should_fail/bkpfail32.bkp
unit p where
    signature A (T) where
